[gd_scene load_steps=3 format=2]

[ext_resource path="res://Global/GlobalTheme.tres" type="Theme" id=1]
[ext_resource path="res://Room/Scrpts/FrameQuestion.gd" type="Script" id=2]

[node name="Question" type="VBoxContainer"]
anchor_right = 1.0
margin_top = 10.0
margin_bottom = 86.0
size_flags_vertical = 3
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Title" type="Label" parent="."]
margin_right = 640.0
margin_bottom = 25.0
text = "QuestionTitle"
align = 1
valign = 1

[node name="UserAnswer" type="LineEdit" parent="."]
margin_top = 29.0
margin_right = 640.0
margin_bottom = 56.0
theme = ExtResource( 1 )
align = 1
caret_blink = true

[connection signal="text_changed" from="UserAnswer" to="." method="_on_UserAnswer_text_changed"]
[connection signal="text_entered" from="UserAnswer" to="." method="_on_UserAnswer_text_entered"]
